# Narnia-Botnet

./: .gitignore  README.md
bot/: .env.example  Cargo.toml
bot/config/: default.toml
bot/src/: c2.rs  config.rs  ddos.rs  main.rs  miner.rs  p2p.rs  worm.rs
builder/src/: main.rs
c2/: .env.example  Cargo.toml
c2/config/: default.toml  production.toml
c2/src/: config.rs  main.rs  security.rs  tor.rs
