[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
walkdir = "2"
dotenvy = "0.15"
config = "0.14"
