[package]
name = "c2"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json", "tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
arti-client = "0.20"
tor-rtcompat = "0.20"
futures = "0.3"
base64 = "0.21"
rand = "0.8"
dotenvy = "0.15"
config = "0.14"
jsonwebtoken = "8.3"
bcrypt = "0.15"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
validator = { version = "0.16", features = ["derive"] }
serde_json = "1.0"
